force-app/main/default/objects/GoTo_Webinar__c/GoTo_Webinar__c.object-meta.xml
<CustomObject>
    <label>GoTo Webinar</label>
    <nameField>
        <displayFormat>GW-{000000}</displayFormat>
        <label>GoTo Webinar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoTo Webinars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>