force-app/main/default/objects/GoTo_Webinar__c/fields/Number_Of_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Registrants__c</fullName>
    <label>Number Of Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>